--- a/Kim's Complete Twitter Timeline (cleaned).ipynb
+++ b/Kim's Complete Twitter Timeline (cleaned).ipynb
@@ -1686,11 +1686,11 @@
     "(<a href=\"https://www.celebuzz.com/2012-02-20/kim-kardashian-goodbye-haters-on-my-blog/\">via</a>)\n",
     "\n",
     "<p>\n",
-    "    Show them Kim! Back then, people still thought trolls could be magically sent away by a few stern words. Her early morning twitter fight with some of her haters has really gotten to her, at least one might think that reading this blog post. This seems to be a particularly vulnerable day for her. Don't feed the trolls, Kim!\n",
+    "    Show them Kim! Back then, people still thought trolls could be magically sent away by a few stern words. Her early morning twitter fight with some of her haters has really gotten to her, at least one might think that reading this blog post. This seems to be a particularly vulnerable day for her. Don't feed the trolls, Kim!</p>\n",
     "    \n",
-    "Incidentally, her blog was discontinued in 2013. Was it because she got too famous and didn't have time anymore for carefully crafted essays such as this one? Or was it because the trolls and haters took over, ruining the innocent fun of her blog? It's not a great loss tho, since it consisted mostly of Kim posting outfits she wore to QVC events and such. \n",
+    "<p>Incidentally, her blog was discontinued in 2013. Was it because she got too famous and didn't have time anymore for carefully crafted essays such as this one? Or was it because the trolls and haters took over, ruining the innocent fun of her blog? It's not a great loss tho, since it consisted mostly of Kim posting outfits she wore to QVC events and such. </p>\n",
     "\n",
-    "People (and by people, I mean myself) forget the truly sad, unglamourous, and borderline tragic things Kim did back then on account of her fame being still somewhat fragile and Kris booking her for all kinds of stuff that she would not touch with a ten foot pole today. I mean... collabing with QVC? But such was the grind back then, I guess. What a powerful reminder for all of us that fame needs to be earned. Secure that bag, Kim! </p>\n",
+    "<p>People (and by people, I mean myself) forget the truly sad, unglamourous, and borderline tragic things Kim did back then on account of her fame being still somewhat fragile and Kris booking her for all kinds of stuff that she would not touch with a ten foot pole today. I mean... collabing with QVC? But such was the grind back then, I guess. What a powerful reminder for all of us that fame needs to be earned. Secure that bag, Kim! </p>\n",
     "    \n",
     "<b>Tweet Count: 30</b>\n",
     "\n",
@@ -1715,7 +1715,7 @@
     "    (This phone battery tweet was obviously a reference to her very short marriage with Kris Humphreys. But Kim will not allow herself to be insulted like that. This serious burn has earned her the highest number of faves for the day. Show them who is boss, Kim!)</p>\n",
     "\n",
     "<p>\n",
-    "    Obviously, people start asking why she even bothers talking to those low-life haters. She justifies her drinking of the haterade with \"being bored\" (while at the same time throwing shade at Khloe and Kourtney) and also \"needing a good laugh\". She then proceeds to casually deny a dating rumor about her by throwing shade at people claiming she only dates athletes: \n",
+    "    Obviously, people start asking why she even bothers talking to those low-life haters. She justifies her drinking of the haterade with \"being bored\" (while at the same time throwing shade at Khloe and Kourtney) and also \"needing a good laugh\". She then proceeds to casually deny a dating rumor about her by throwing shade at people claiming she only dates athletes: </p>\n",
     "\n",
     "> @Alex__Rhea I usually bite my tonge, and let my sisters talk crazy, but I am bored tonight! lol\n",
     "\n",
@@ -1746,23 +1746,23 @@
     "<b>Final Tweet Count: 53</b>\n",
     "\n",
     "<p>\n",
-    "    What an amazing time to be alive.\n",
+    "    What an amazing time to be alive.</p>\n",
     "\n",
     "### What we have learned so far\n",
     "    \n",
-    "This day is really interesting as it gives us a glimpse into an early version of Kim who, two months before publicly starting to date Kanye is surprisingly close to the \"normal\" people on twitter: She interacts with her followers a lot, even her \"haters\", debating them, defending herself and her family against whatever story or accusation was out there at the time, and she credits her \"twitter peeps\" with talking her into signing up on Instagram etc. \n",
+    "<p>This day is really interesting as it gives us a glimpse into an early version of Kim who, two months before publicly starting to date Kanye is surprisingly close to the \"normal\" people on twitter: She interacts with her followers a lot, even her \"haters\", debating them, defending herself and her family against whatever story or accusation was out there at the time, and she credits her \"twitter peeps\" with talking her into signing up on Instagram etc. </p>\n",
     "\n",
-    "This is very much different from the way we see her using twitter today, where she still retweets non-famouses sometimes, but usually only tweets that are praising one of her products – so it's clearly done with the purpose of self-promotion and increasing her revenue. This also highlights for us how her growing into her own as a business woman might have changed her twitter behavior as well. This becomes especially apparent during her interactions with <em>the haters</em> when one of her followers tweets at her saying she's giving <em>the haters</em> free publicity by retweeting them and she replies:\n",
+    "<p>This is very much different from the way we see her using twitter today, where she still retweets non-famouses sometimes, but usually only tweets that are praising one of her products – so it's clearly done with the purpose of self-promotion and increasing her revenue. This also highlights for us how her growing into her own as a business woman might have changed her twitter behavior as well. This becomes especially apparent during her interactions with <em>the haters</em> when one of her followers tweets at her saying she's giving <em>the haters</em> free publicity by retweeting them and she replies:</p>\n",
     "\n",
     "> <b>Shoot your right. I don't do anything for free.</b> My bad RT @Rene -Kim Stop Retweeting all the haters. You're giving them free publicity \n",
     "\n",
-    "Emphasis mine. Looking at the way she tweets these days, she clearly seems to have internalized that lesson. Today, interaction only occurs when there is a possible bag to secure and she only gives the spotlight (i. e. retweets and replies) to people if she has to possibly gain something as well (i. e. selling more of her products). Back in 2012, her income mostly came from KUWTK and doing public appearances. Nowadays, she still earns those coins, but she also has her own products she wants to sell to us, so the days of innocently interacting with people on twitter are over.\n",
+    "<p>Emphasis mine. Looking at the way she tweets these days, she clearly seems to have internalized that lesson. Today, interaction only occurs when there is a possible bag to secure and she only gives the spotlight (i. e. retweets and replies) to people if she has to possibly gain something as well (i. e. selling more of her products). Back in 2012, her income mostly came from KUWTK and doing public appearances. Nowadays, she still earns those coins, but she also has her own products she wants to sell to us, so the days of innocently interacting with people on twitter are over.</p>\n",
     "\n",
-    "It is very clear that back then she was not yet a brand, she was still behaving like a person on social media. Her goofy instagram pics attest to this as well. Obviously the platforms themselves changed as well, something to which she might well have contributed to. \n",
+    "<p>It is very clear that back then she was not yet a brand, she was still behaving like a person on social media. Her goofy instagram pics attest to this as well. Obviously the platforms themselves changed as well, something to which she might well have contributed to. </p>\n",
     "    \n",
-    "The advent of her Instagram which we coincidentally get to witness here also will turn into a defining moment for her career. Instagram was arguably one of the most important tools which ultimately helped her establishing herself as the ultimate celebrity who is \"famous for being famous\", as so many of her iconic and controversial shots will be published on her account later on, and of course, many of her spon con will take place on Instagram, creating another highly profitable income channel for her beyond the invaluable branding the platform provides for her. \n",
+    "<p>The advent of her Instagram which we coincidentally get to witness here also will turn into a defining moment for her career. Instagram was arguably one of the most important tools which ultimately helped her establishing herself as the ultimate celebrity who is \"famous for being famous\", as so many of her iconic and controversial shots will be published on her account later on, and of course, many of her spon con will take place on Instagram, creating another highly profitable income channel for her beyond the invaluable branding the platform provides for her. </p>\n",
     "\n",
-    "Who would have known those early selfies which are really cringe-inducing today would lead to the polished persona we see on her Instagram today?\n",
+    "<p>Who would have known those early selfies which are really cringe-inducing today would lead to the polished persona we see on her Instagram today?\n",
     " </p>"
    ]
   },
